adding web functionalities pt2

--- a/modules/must-FrontEndJS/web/style.css
+++ b/modules/must-FrontEndJS/web/style.css
@@ -5,7 +5,7 @@ body, html {
 
 /* Apply a background image for the page */
 body {
-    background-image: url('space_background.jpg');
+    background-image: url('nebula.png');
     background-size: cover;
     font-family: Arial, sans-serif;
     color: #fff;
